--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Patrick Adak</h1>
+            <h1>Laith Al Mohsen</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -23,7 +23,7 @@
     <section id="about">
         <div class="container">
             <h2 class="title">About Me</h2>
-            <p>Hi my name is <span>Laith</span> <br> I am a game devloper and 3D Artist with experience about 2 years <br> And I Use <span>Unity</span> with language <span>C#</span> to devolope games <br> and I use <span>Blender</span> to make 3D characters  </p>
+            <p>Hi my name is <span>Laith</span> <br> I am a game developer and 3D character artist,<br> I have more than two years of experience in developing games and I have the skill of sculpting on 3D programs. <br> And I Use <span>Unity</span> with language <span>C#</span> to devolope games <br> and I use <span>Blender</span> to make 3D characters  </p>
         </div>
     </section>
 
@@ -101,7 +101,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Patrick Adak. All rights reserved.</p>
+            <p>&copy; Laith Almohsen. All rights reserved.</p>
         </div>
     </footer>
 
